force-app/main/default/objects/Document_Template__c/Document_Template__c.object-meta.xml
<CustomObject>
    <description>Root template for a class of generated PDF documents (e.g., Pre-Op Form, Training Record). Holds metadata and points at one or more Template_Version__c records.</description>
    <label>Document Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>