force-app/main/default/objects/Document_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, the Generate PDF button using this template will be hidden / disabled.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>