force-app/main/default/objects/Document_Template__c/fields/Default_Version__c.field-meta.xml
<CustomField>
    <fullName>Default_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fallback Template_Version__c used when no Template_Mapping__c rule matches the source record.</description>
    <label>Default Version</label>
    <referenceTo>Template_Version__c</referenceTo>
    <relationshipLabel>Default For Templates</relationshipLabel>
    <relationshipName>Default_For_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>