force-app/main/default/objects/Document_Template__c/fields/File_Naming_Pattern__c.field-meta.xml
<CustomField>
    <fullName>File_Naming_Pattern__c</fullName>
    <description>Tokenized file name. Tokens like {{Name}}, {{CreatedDate}}, {{Field_Api_Name__c}} are resolved at generate time. Defaults to template name + record name if blank.</description>
    <label>File Naming Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>