force-app/main/default/objects/Document_Template__c/fields/Overwrite_Existing_File__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Existing_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, regenerating replaces the prior PDF (matching by Source_Template_Version__c on ContentVersion). If false, each generation creates a new file.</description>
    <label>Overwrite Existing File</label>
    <type>Checkbox</type>
</CustomField>