force-app/main/default/objects/Document_Template__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <description>User who reviewed this template before promotion to production. Populated by PDF authors during the review handoff workflow.</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Templates</relationshipLabel>
    <relationshipName>Reviewed_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>