force-app/main/default/objects/Document_Template__c/fields/Target_SObject__c.field-meta.xml
<CustomField>
    <fullName>Target_SObject__c</fullName>
    <description>API name of the SObject this template is generated against (e.g., Form__c, Account, Opportunity).</description>
    <label>Target SObject API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>