force-app/main/default/objects/Document_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_SObject__c</columns>
    <columns>Active__c</columns>
    <columns>Default_Version__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>